# BeamSearchCLP

./: .gitignore
CLP2014/: Block.cpp  Block.h  Box.cpp  Box.h  CLP-G2LA  CLP-REVIEW  CLP-REVIEW-norb  CLP-REVIEW-sym2  CLP-araya  CLP-no-bpr  CLP-no-bpr-simple  CLP-paper  CLP.cpp  CLP.h  CLP2  CLP2-log2m  CLP2-m  CLP2-m1  CMakeLists.txt  Container.cpp  Container.h  MainCLP-REVIEW-hc_in_each_succ.cpp  MainCLP-REVIEW.cpp  MainCLP-light.cpp  MainCLP-no-bpr.cpp  MainCLP-paper-bak2.cpp  MainCLP-paper.cpp  MainCLP-paper.cpp-bak  MainCLP.cpp  Policy.h  README  SortedList.cpp  SortedList.h  gmon.out  out  tests-insts.sh  tests.sh  tests2.sh
CLP2014/out-20140903-fairBSG/: BR10  BR11  BR12  BR13  BR14  BR15  BR8  BR9
CLP2014/out-CLP2-logm/: BR10  BR11  BR12  BR13  BR14  BR15  BR8  BR9
CLP2014/out-CLPm/: BR10  BR11  BR12  BR13  BR14  BR15  BR8  BR9
CLP2014/out-out-20140901-BSG/: BR10  BR11  BR12  BR13  BR14  BR15  BR8  BR9
bullet-2.80-rev2531/: CMakeCache (Copia conflictiva de iaraya-laptop 2012-10-08).txt
bullet-2.80-rev2531/Demos/HelloWorld/: AppHelloWorld
